[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/game/base_quiz_eagle.gd" type="Script" id=1]
[ext_resource path="res://assets/game/juliette_anim/idle.png" type="Texture" id=2]
[ext_resource path="res://assets/player/idle.png" type="Texture" id=3]
[ext_resource path="res://assets/game/bubble.png" type="Texture" id=4]
[ext_resource path="res://themes/bubbles.tres" type="Theme" id=5]
[ext_resource path="res://assets/game/dialogue_next.png" type="Texture" id=6]
[ext_resource path="res://scenes/game/flying_eagle.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/game/quiz_question.png" type="Texture" id=8]
[ext_resource path="res://fonts/segoeuisl24.fnt" type="BitmapFont" id=9]
[ext_resource path="res://themes/text24.tres" type="Theme" id=10]
[ext_resource path="res://scenes/game/quiz.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/game/quiz_result.tscn" type="PackedScene" id=12]

[node name="base_quiz" type="Node2D"]

script/script = ExtResource( 1 )

[node name="juliette_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 893.756, 575.725 )
transform/scale = Vector2( 1.5, 1.5 )
z/z = -2
texture = ExtResource( 2 )

[node name="victor_sprite" type="Sprite" parent="."]

transform/pos = Vector2( 1173.76, 591.553 )
transform/scale = Vector2( 1.5, 1.5 )
z/z = -2
texture = ExtResource( 3 )
flip_h = true

[node name="juliette" type="Node2D" parent="." groups=[
"character",
]]

editor/display_folded = true
transform/pos = Vector2( 893.756, 575.725 )
transform/scale = Vector2( 1.5, 1.5 )

[node name="bubble" type="Sprite" parent="juliette"]

visibility/visible = false
transform/pos = Vector2( -194, -237.452 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="text" type="Label" parent="juliette"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = -314.0
margin/top = -349.0
margin/right = -80.0
margin/bottom = -190.0
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next" type="Sprite" parent="juliette"]

visibility/visible = false
transform/pos = Vector2( -59.132, -273.799 )
texture = ExtResource( 6 )

[node name="victor" type="Node2D" parent="." groups=[
"character",
]]

editor/display_folded = true
transform/pos = Vector2( 1173.76, 591.553 )
transform/scale = Vector2( 1.5, 1.5 )

[node name="bubble" type="Sprite" parent="victor"]

visibility/visible = false
transform/pos = Vector2( 235.168, -234.502 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )
flip_h = true

[node name="text" type="Label" parent="victor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 5 )
margin/left = 120.0
margin/top = -349.0
margin/right = 353.0
margin/bottom = -187.0
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="next" type="Sprite" parent="victor"]

visibility/visible = false
transform/pos = Vector2( 376, -270.667 )
texture = ExtResource( 6 )

[node name="flying_eagle" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 932.026, 701.095 )
z/z = -2

[node name="question_bg" type="Sprite" parent="."]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.7
transform/pos = Vector2( 960, 710 )
texture = ExtResource( 8 )

[node name="question" type="Label" parent="question_bg"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -340.0
margin/top = -75.0
margin/right = 340.0
margin/bottom = 75.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 10 )
margin/left = 610.0
margin/top = 800.0
margin/right = 1310.0
margin/bottom = 1000.0
alignment = 1

[node name="Button1" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 700.0
margin/bottom = 47.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button2" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 51.0
margin/right = 700.0
margin/bottom = 98.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button3" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 102.0
margin/right = 700.0
margin/bottom = 149.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Button4" type="Button" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 153.0
margin/right = 700.0
margin/bottom = 200.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="quiz" parent="." instance=ExtResource( 11 )]

[node name="quiz_result" parent="." instance=ExtResource( 12 )]

visibility/visible = false


